Rediseño frontend y ajustes de config