@@ -27,7 +27,7 @@ public class LocaleConfig implements WebMvcConfigurer {
     @Bean
     public LocaleResolver localeResolver() {
         SessionLocaleResolver slr = new SessionLocaleResolver();
-        slr.setDefaultLocale(Locale.of("es")); // Establece el español como idioma por defecto
+        slr.setDefaultLocale(new Locale("es")); // Establece el español como idioma por defecto
         logger.info("LocaleResolver configurado con el idioma predeterminado: es");
         return slr;
     }
